src/test/error/Sub6.lns
import test.error.Sub5;

pub fn func(): Sub5.Sub5enum {
   return .val1;
}

pub fn func2( val:Sub5.Sub5enum ) {
}

pub class Test {
   local let val:int;
}

pub fn func3( val:Test ) {
}